# ml_dl_with_topology_data

./: .gitignore  EDA_of_data.ipynb  README.md  ml_methods.ipynb  pyproject.toml
notebooks/: EDA_of_data.ipynb  EDA_of_data_2.ipynb  README.md  deep_methods.ipynb  deep_methods_L=1.6_CNN.ipynb  deep_methods_L=6.6_CNN.ipynb  deep_methods_L=6.6_CNN_from_paper.ipynb  deep_methods_L=7.6_CNN.ipynb  ml_methods.ipynb  ml_methods_2.ipynb  ml_methods_merged_L_1_6.ipynb  ml_methods_merged_L_6.6.ipynb
notebooks/dl/: Extra_feature_regression.ipynb  MLP_CNN_comparation.ipynb  MLP_light_L=1.6.ipynb  MLP_light_L=10.6.ipynb  MLP_light_L=6.6.ipynb  MLP_light_L=7.6.ipynb  MLP_light_L=8.6.ipynb  MLP_light_different_N.ipynb  MLP_light_on_entire_dataset.ipynb  MLP_light_really_different_N.ipynb  deep_methods_L=1.6_CNN.ipynb  deep_methods_L=10.6_CNN.ipynb  deep_methods_L=10.6_CNN_bs_1024.ipynb  deep_methods_L=10.6_CNN_bs_1024_more_ks.ipynb  deep_methods_L=6.6_CNN.ipynb  deep_methods_L=6.6_CNN_from_paper.ipynb  deep_methods_L=6.6_RNN.ipynb  deep_methods_L=7.6_CNN.ipynb  deep_methods_L=8.6_CNN.ipynb
notebooks/eda/: Accuracy_graphs.ipynb  Corr_matrices.ipynb  EDA_of_data.ipynb  EDA_of_data_2.ipynb  TSNE.ipynb  models_analysis.ipynb
notebooks/ml/: ml_methods_L=1.6.ipynb  ml_methods_L=10.6.ipynb  ml_methods_L=6.6.ipynb  ml_methods_L=7.6.ipynb  ml_methods_L=8.6.ipynb
notebooks/tmp/: README.md  deep_methods.ipynb  ml_methods.ipynb  ml_methods_2.ipynb  ml_methods_merged_L_1_6.ipynb  ml_methods_merged_L_6.6.ipynb
resources/: 2
utils/: dl_models.py  utils.py
(+7 files in other folders)
