[tool.poetry]
name = "ml_dl_with_topology_data"
version = "0.1.0"
description = "TBD"
authors = ["Alexey Khorkin <alexeykhorkin12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
pandas = "^1.4.2"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
sklearn = "^0.0"
torch = "^1.11.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
